[project]
name = "flight-recommendation"
version = "0.1.0"
description = "OTA国际机票下单失败重推荐模型"
authors = [{name = "Gemini", email = "gemini@example.com"}]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[tool.poetry]
packages = [{include = "flight_rec_project", from = "src"}]


[tool.poetry.group.dev.dependencies]
notebook = "^7.5.2"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
